# png_text_strip

./: CMakeLists.txt  README.md  main.cpp  png_text_strip.desktop
